@@ -30,7 +30,7 @@
 
 // Written by Gabriel Dos Reis <Gabriel.Dos-Reis@cmla.ens-cachan.fr>
 
-/** @file valarray_meta.h
+/** @file valarray_after.h
  *  This is an internal header file, included by other library headers.
  *  You should not attempt to use it directly.
  */
