@@ -53,7 +53,7 @@
  * purpose.  It is provided "as is" without express or implied warranty.
  */
 
-/** @file algorithm
+/** @file
  *  This is a Standard C++ Library header.  You should @c #include this header
  *  in your programs, rather than any of the "st[dl]_*.h" implementation files.
  */
