@@ -41,7 +41,7 @@
  *
  */
 
-/** @file functional
+/** @file
  *  This is a Standard C++ Library header.  You should @c #include this header
  *  in your programs, rather than any of the "st[dl]_*.h" implementation files.
  */
